<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView

        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"

        android:text="@string/elevator"

        />

    <TextView

        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"


        android:text="@string/level_1"

        />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level"
        android:paddingTop="8dp"

        android:text="@string/_0_position"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position"
        android:padding="4dp"

        android:text="@string/_250"
        android:textSize="20sp"
        />

    <ImageButton
        android:id="@+id/upgrade"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/click"
        app:layout_constraintStart_toStartOf="@+id/click"
        app:layout_constraintEnd_toEndOf="@+id/click"

        android:layout_margin="15dp"
        android:background="@color/purple_but"
        android:src="@drawable/upgrade"
        />


    <Button
        android:id="@+id/click"
        android:layout_width="100dp"
        android:layout_height="80dp"

        android:background="@color/purple_but"
        android:text="@string/click"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/upgradeCoast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upgrade"
        app:layout_constraintStart_toStartOf="@+id/upgrade"
        app:layout_constraintEnd_toEndOf="@+id/upgrade"
        android:layout_marginTop="6dp"

        android:text="@string/_250"
        android:textSize="14sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>