<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView

        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"

        android:clickable="true"
        android:text="@string/mine"

        />

    <TextView

        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"

        android:text="@string/level_1"

        />

    <TextView
        android:id="@+id/perSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="0dp"
        android:layout_marginStart="10dp"

        android:text="@string/_10_p_s"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/perSecond"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="0dp"
        android:layout_marginStart="15dp"

        android:text="@string/_250"
        android:textSize="20sp"
        />

    <ImageButton
        android:id="@+id/upgrade"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="15dp"
        android:background="@color/purple_but"
        android:src="@drawable/upgrade"
        />

    <TextView
        android:id="@+id/upgradeCoast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upgrade"
        app:layout_constraintStart_toStartOf="@+id/upgrade"
        app:layout_constraintEnd_toEndOf="@+id/upgrade"
        android:layout_marginTop="0dp"

        android:text="@string/_250"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/click"
        android:layout_width="65dp"
        android:layout_height="40dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/upgrade"
        android:layout_margin="15dp"
        android:background="@color/purple_but"

        android:text="@string/click"
        android:textSize="10sp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>